v0.0.1/modules/schema/pages/class/TransactionBid.adoc
= `TransactionBid`
:toclevels: 4


+++Bilateral or scheduled transactions for energy and ancillary services considered by market clearing process.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransactionBid`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** xref::class/Bid.adoc[`Bid`]
**** *`TransactionBid`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TransactionBid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransactionBidResults {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Pnode {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Pnode {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransmissionReservation {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnergyProfile {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketParticipant {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnergyMarket {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ChargeProfile {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MitigatedBidSegment {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RMRDetermination {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MitigatedBid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



BidHourlySchedule {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ProductBid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ActionRequest {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Author {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Editor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Approver {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Issuer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




TransactionBid -> TransactionBidResults: TransactionBidResults


TransactionBid -> Pnode: Delivery_Pnode


TransactionBid -> Pnode: Receipt_Pnode


TransactionBid -> TransmissionReservation: TransmissionReservation


TransactionBid -> EnergyProfile: EnergyProfiles


TransactionBid -> MarketParticipant: MarketParticipant


TransactionBid -> EnergyMarket: EnergyMarket


TransactionBid -> ChargeProfile: ChargeProfiles


TransactionBid -> MitigatedBidSegment: MitigatedBidSegment


TransactionBid -> RMRDetermination: RMRDetermination


TransactionBid -> MitigatedBid: MitigatedBid


TransactionBid -> BidHourlySchedule: BidHourlySchedule


TransactionBid -> ProductBid: ProductBids


TransactionBid -> ActionRequest: ActionRequest


TransactionBid -> Status: docStatus


TransactionBid -> ElectronicAddress: electronicAddress


TransactionBid -> Status: status


TransactionBid -> ActivityRecord: ActivityRecord


TransactionBid -> ConfigurationEvent: ConfigurationEvents


TransactionBid -> Author: Author


TransactionBid -> Editor: Editor


TransactionBid -> Approver: Approver


TransactionBid -> Issuer: Issuer


TransactionBid -> DiagramObject: DiagramObjects


TransactionBid -> InstanceSet: InstanceSet


TransactionBid -> Name: Names


TransactionBid -> ChangeSetMember: PropertiesCIMDataObject


TransactionBid -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<EnergyProfiles,`EnergyProfiles`>>
| 1..*
| xref::class/EnergyProfile.adoc[`EnergyProfile`]
| n/a

| <<ActionRequest,`ActionRequest`>>
| 1
| xref::class/ActionRequest.adoc[`ActionRequest`]
| n/a

| <<EnergyMarket,`EnergyMarket`>>
| 1
| xref::class/EnergyMarket.adoc[`EnergyMarket`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ProductBids,`ProductBids`>>
| 1..*
| xref::class/ProductBid.adoc[`ProductBid`]
| +++A bid comprises one or more product bids of market products+++

| <<Delivery_Pnode,`Delivery_Pnode`>>
| 0..1
| xref::class/Pnode.adoc[`Pnode`]
| n/a

| <<Receipt_Pnode,`Receipt_Pnode`>>
| 0..1
| xref::class/Pnode.adoc[`Pnode`]
| n/a

| <<TransmissionReservation,`TransmissionReservation`>>
| 0..1
| xref::class/TransmissionReservation.adoc[`TransmissionReservation`]
| n/a

| <<demandTransaction,`demandTransaction`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Set true if this is a demand transaction.+++

| <<dispatchable,`dispatchable`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Set true if this is a dispatchable transaction.+++

| <<payCongestion,`payCongestion`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Set true if this is a willing to pay transaction. This flag is used to determine whether a schedule is willing-to-pay-congestion or not.+++

| <<TransactionBidResults,`TransactionBidResults`>>
| 0..*
| xref::class/TransactionBidResults.adoc[`TransactionBidResults`]
| n/a

| <<Approver,`Approver`>>
| 0..1
| xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++

| <<Author,`Author`>>
| 0..1
| xref::class/Author.adoc[`Author`]
| +++Author of this document.+++

| <<Editor,`Editor`>>
| 0..1
| xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++

| <<Issuer,`Issuer`>>
| 0..1
| xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++

| <<MarketParticipant,`MarketParticipant`>>
| 0..1
| xref::class/MarketParticipant.adoc[`MarketParticipant`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<authorName,`authorName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++

| <<comment,`comment`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++

| <<createdDateTime,`createdDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<docStatus,`docStatus`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<marketType,`marketType`>>
| 0..1
| xref::enumeration/MarketType.adoc[`MarketType`]
| +++The market type, DAM or RTM.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<revisionNumber,`revisionNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++

| <<startTime,`startTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Start time and date for which bid applies.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

| <<stopTime,`stopTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Stop time and date for which bid is applicable.+++

| <<subject,`subject`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document subject.+++

| <<title,`title`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document title.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

| <<ActivityRecord,`ActivityRecord`>>
| 0..*
| xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++

| <<BidHourlySchedule,`BidHourlySchedule`>>
| 0..*
| xref::class/BidHourlySchedule.adoc[`BidHourlySchedule`]
| n/a

| <<ChargeProfiles,`ChargeProfiles`>>
| 0..*
| xref::class/ChargeProfile.adoc[`ChargeProfile`]
| n/a

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<MitigatedBid,`MitigatedBid`>>
| 0..*
| xref::class/MitigatedBid.adoc[`MitigatedBid`]
| n/a

| <<MitigatedBidSegment,`MitigatedBidSegment`>>
| 0..*
| xref::class/MitigatedBidSegment.adoc[`MitigatedBidSegment`]
| n/a

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<RMRDetermination,`RMRDetermination`>>
| 0..*
| xref::class/RMRDetermination.adoc[`RMRDetermination`]
| n/a

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#ActionRequest]
=== `ActionRequest`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.ActionRequest`
| Cardinality
| 1
| Type
| xref::class/ActionRequest.adoc[`ActionRequest`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#BidHourlySchedule]
=== `BidHourlySchedule`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.BidHourlySchedule`
| Cardinality
| 0..*
| Type
| xref::class/BidHourlySchedule.adoc[`BidHourlySchedule`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#ChargeProfiles]
=== `ChargeProfiles`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.ChargeProfiles`
| Cardinality
| 0..*
| Type
| xref::class/ChargeProfile.adoc[`ChargeProfile`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Delivery_Pnode]
=== `Delivery_Pnode`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransactionBid.Delivery_Pnode`
| Cardinality
| 0..1
| Type
| xref::class/Pnode.adoc[`Pnode`]


|===

//[discrete]
[#demandTransaction]
=== `demandTransaction`
+++Set true if this is a demand transaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransactionBid.demandTransaction`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dispatchable]
=== `dispatchable`
+++Set true if this is a dispatchable transaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransactionBid.dispatchable`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#EnergyMarket]
=== `EnergyMarket`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.EnergyMarket`
| Cardinality
| 1
| Type
| xref::class/EnergyMarket.adoc[`EnergyMarket`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#EnergyProfiles]
=== `EnergyProfiles`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransactionBid.EnergyProfiles`
| Cardinality
| 1..*
| Type
| xref::class/EnergyProfile.adoc[`EnergyProfile`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#MarketParticipant]
=== `MarketParticipant`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.MarketParticipant`
| Cardinality
| 0..1
| Type
| xref::class/MarketParticipant.adoc[`MarketParticipant`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#marketType]
=== `marketType`
+++The market type, DAM or RTM.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.marketType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketType.adoc[`MarketType`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#MitigatedBid]
=== `MitigatedBid`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.MitigatedBid`
| Cardinality
| 0..*
| Type
| xref::class/MitigatedBid.adoc[`MitigatedBid`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#MitigatedBidSegment]
=== `MitigatedBidSegment`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.MitigatedBidSegment`
| Cardinality
| 0..*
| Type
| xref::class/MitigatedBidSegment.adoc[`MitigatedBidSegment`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#payCongestion]
=== `payCongestion`
+++Set true if this is a willing to pay transaction. This flag is used to determine whether a schedule is willing-to-pay-congestion or not.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransactionBid.payCongestion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#ProductBids]
=== `ProductBids`
+++A bid comprises one or more product bids of market products+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.ProductBids`
| Cardinality
| 1..*
| Type
| xref::class/ProductBid.adoc[`ProductBid`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Receipt_Pnode]
=== `Receipt_Pnode`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransactionBid.Receipt_Pnode`
| Cardinality
| 0..1
| Type
| xref::class/Pnode.adoc[`Pnode`]


|===

//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#RMRDetermination]
=== `RMRDetermination`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.RMRDetermination`
| Cardinality
| 0..*
| Type
| xref::class/RMRDetermination.adoc[`RMRDetermination`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#startTime]
=== `startTime`
+++Start time and date for which bid applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.startTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#stopTime]
=== `stopTime`
+++Stop time and date for which bid is applicable.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.stopTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#subject]
=== `subject`
+++Document subject.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#title]
=== `title`
+++Document title.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#TransactionBidResults]
=== `TransactionBidResults`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransactionBid.TransactionBidResults`
| Cardinality
| 0..*
| Type
| xref::class/TransactionBidResults.adoc[`TransactionBidResults`]


|===

//[discrete]
[#TransmissionReservation]
=== `TransmissionReservation`


[cols="h,4",width=65%]
|===
| URI
| `cim:TransactionBid.TransmissionReservation`
| Cardinality
| 0..1
| Type
| xref::class/TransmissionReservation.adoc[`TransmissionReservation`]


|===

//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===


